--- a/package.json
+++ b/package.json
@@ -5,12 +5,19 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test:performance": "playwright test tests/performance",
+    "test:performance:report": "playwright test tests/performance --reporter=html",
+    "test:performance:ui": "playwright test tests/performance --ui",
+    "test:performance:headed": "playwright test tests/performance --headed",
+    "test:state": "playwright test tests/performance/04-detailed-state.spec.js",
+    "test:state:headed": "playwright test tests/performance/04-detailed-state.spec.js --headed"
   },
   "dependencies": {
     "ol": "^10.4.0"
   },
   "devDependencies": {
+    "@playwright/test": "^1.58.2",
     "vite": "^6.1.0"
   }
 }
